--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-BatalhaNaval/BatalhaNaval.pro.user
+*.pro.user
 build-Sensores-Android/
 build-Sensores-Android_for_armeabi_v7a_arm64_v8a_x86_x86_64_Clang_Qt_5_15_0_for_Android-Debug/
